Day5/BuildConfig/hello-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: openshift1620sep2024.jfrog.io/jegan-docker/hello-spring-microservice:1.0 
        name: hello
      imagePullSecrets:
      - name: private-jfrog-image-registry-new
